--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.1"
+    "sequelize": "^6.31.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
